feat: Set env es2020 = true

--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -9,13 +9,12 @@ extends:
   - plugin:sonarjs/recommended
 env:
   node: true
-  es6: true
-parserOptions:
-  ecmaVersion: 2020
+  es2020: true
 rules:
   strict: 2
   no-console: 2
   max-len: 0
   func-names: 0
+  prefer-rest-params: 0
   valid-jsdoc: 0
   require-jsdoc: 0
