--- a/package.json
+++ b/package.json
@@ -18,14 +18,12 @@
     "javascript"
   ],
   "dependencies": {
-    "@types/eslint": "^7.2.0",
-    "@types/node": "^14.0.14",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-security": "^1.4.0",
-    "eslint-plugin-sonarjs": "^0.5.0"
+    "eslint-plugin-sonarjs": "^0.10.0"
   },
   "peerDependencies": {
-    "eslint": ">=6.0.0"
+    "eslint": "^6.0.0 || ^7.0.0"
   },
   "repository": {
     "type": "git",
@@ -33,5 +31,9 @@
   },
   "bugs": {
     "url": "https://github.com/mauriciolauffer/eslint-config-mlauffer-nodejs.git/issues"
+  },
+  "devDependencies": {
+    "@types/eslint": "^7.28.0",
+    "@types/node": "^16.6.1"
   }
 }
