--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,11 +8,12 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - uses: actions/setup-node@v1
+    - uses: actions/setup-node@v2
       with:
-        node-version: 12.x
-    - run: npm install -g eslint
-    - run: npm install
+        node-version: 14
+        cache: npm
+    - run: npm install -g eslint --ignore-scripts
+    - run: npm ci --ignore-scripts
     - run: npm test
       env:
         CI: true
