--- a/package.json
+++ b/package.json
@@ -19,15 +19,12 @@
   ],
   "dependencies": {
     "eslint-config-google": "^0.14.0",
+    "eslint-plugin-jsdoc": "^36.1.1",
     "eslint-plugin-security": "^1.4.0",
     "eslint-plugin-sonarjs": "^0.10.0"
   },
-  "devDependencies": {
-    "@types/eslint": "^7.28.1",
-    "@types/node": "^16.10.4"
-  },
   "peerDependencies": {
-    "eslint": "^6.0.0 || ^7.0.0"
+    "eslint": "^6.0.0 || ^7.0.0 || ^8.0.0"
   },
   "repository": {
     "type": "git",
