--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
   ],
   "dependencies": {
     "eslint-config-google": "^0.14.0",
-    "eslint-plugin-jsdoc": "^37.4.0",
-    "eslint-plugin-security": "^1.4.0",
-    "eslint-plugin-sonarjs": "^0.11.0"
+    "eslint-plugin-jsdoc": "^39.2.7",
+    "eslint-plugin-security": "^1.5.0",
+    "eslint-plugin-sonarjs": "^0.13.0"
   },
   "peerDependencies": {
-    "eslint": "^6.0.0 || ^7.0.0 || ^8.0.0"
+    "eslint": "^7.0.0 || ^8.0.0"
   },
   "repository": {
     "type": "git",
