--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
   ],
   "dependencies": {
     "eslint-config-google": "^0.14.0",
-    "eslint-plugin-jsdoc": "^39.2.7",
+    "eslint-plugin-anti-trojan-source": "^1.1.0",
+    "eslint-plugin-jsdoc": "^39.6.4",
     "eslint-plugin-security": "^1.5.0",
-    "eslint-plugin-sonarjs": "^0.13.0"
+    "eslint-plugin-sonarjs": "^0.17.0"
   },
   "peerDependencies": {
-    "eslint": "^7.0.0 || ^8.0.0"
+    "eslint": "^7 || ^8"
   },
   "repository": {
     "type": "git",
