--- a/package.json
+++ b/package.json
@@ -20,13 +20,13 @@
   ],
   "dependencies": {
     "eslint-config-google": "^0.14.0",
-    "eslint-plugin-anti-trojan-source": "^1.1.0",
-    "eslint-plugin-jsdoc": "^39.6.4",
-    "eslint-plugin-security": "^1.5.0",
-    "eslint-plugin-sonarjs": "^0.17.0"
+    "eslint-plugin-anti-trojan-source": "^1.1.1",
+    "eslint-plugin-jsdoc": "^40.0.0",
+    "eslint-plugin-security": "^1.7.1",
+    "eslint-plugin-sonarjs": "^0.18.0"
   },
   "peerDependencies": {
-    "eslint": "^7 || ^8"
+    "eslint": ">=8"
   },
   "repository": {
     "type": "git",
