--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "module": "CommonJS",
-    "target": "ES2020",
+    "target": "ESNext",
     "alwaysStrict": true,
     "noEmit": true,
     "checkJs": true,
