--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
   "keywords": [
     "eslint",
     "config",
-    "javascript"
+    "javascript",
+    "node",
+    "nodejs"
   ],
   "dependencies": {
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-anti-trojan-source": "^1.1.1",
-    "eslint-plugin-jsdoc": "^46.5.1",
+    "eslint-plugin-jsdoc": "^46.8.1",
     "eslint-plugin-security": "^1.7.1",
     "eslint-plugin-sonarjs": "^0.21.0"
   },
