--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lib/**"
   ],
   "scripts": {
-    "lint": "eslint lib",
+    "lint": "eslint lib --cache",
+    "lint:ci": "eslint lib -f @microsoft/eslint-formatter-sarif -o eslint.sarif",
     "test": "npm run lint"
   },
   "keywords": [
@@ -21,9 +22,10 @@
     "nodejs"
   ],
   "dependencies": {
+    "@microsoft/eslint-formatter-sarif": "^3.0.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-anti-trojan-source": "^1.1.1",
-    "eslint-plugin-jsdoc": "^46.8.1",
+    "eslint-plugin-jsdoc": "^46.8.2",
     "eslint-plugin-security": "^1.7.1",
     "eslint-plugin-sonarjs": "^0.21.0"
   },
