--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,4 +24,4 @@ jobs:
     - run: npm run lint:ci
     - uses: github/codeql-action/upload-sarif@v2
       with:
-        sarif_file: target/eslint.sarif
+        sarif_file: eslint.sarif
