--- a/package.json
+++ b/package.json
@@ -25,12 +25,12 @@
     "@microsoft/eslint-formatter-sarif": "^3.0.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-anti-trojan-source": "^1.1.1",
-    "eslint-plugin-jsdoc": "^46.8.2",
+    "eslint-plugin-jsdoc": "^46.9.0",
     "eslint-plugin-security": "^1.7.1",
-    "eslint-plugin-sonarjs": "^0.22.0"
+    "eslint-plugin-sonarjs": "^0.23.0"
   },
   "peerDependencies": {
-    "eslint": ">=8"
+    "eslint": "^8.55.0"
   },
   "engines": {
     "node": ">=16"
