--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "private": false,
   "author": "Mauricio Lauffer",
   "license": "MIT",
+  "type": "module",
   "main": "lib/index.js",
   "files": [
-    "lib/**"
+    "lib"
   ],
   "scripts": {
     "lint": "eslint lib --cache",
     "lint:ci": "eslint lib -f @microsoft/eslint-formatter-sarif -o eslint.sarif",
+    "format": "prettier . --write --cache && npm run lint -- --fix",
     "test": "npm run lint"
   },
   "keywords": [
@@ -22,18 +24,22 @@
     "nodejs"
   ],
   "dependencies": {
-    "@microsoft/eslint-formatter-sarif": "^3.0.0",
-    "eslint-config-google": "^0.14.0",
-    "eslint-plugin-anti-trojan-source": "^1.1.1",
-    "eslint-plugin-jsdoc": "^46.9.0",
-    "eslint-plugin-security": "^1.7.1",
-    "eslint-plugin-sonarjs": "^0.23.0"
+    "@eslint/js": "^9.1.1",
+    "@microsoft/eslint-formatter-sarif": "^3.1.0",
+    "eslint-plugin-jsdoc": "^48.2.3",
+    "eslint-plugin-security": "^3.0.0",
+    "eslint-plugin-sonarjs": "^0.25.1"
+  },
+  "devDependencies": {
+    "@types/eslint": "^8.56.10",
+    "@types/node": "^20.12.7",
+    "prettier": "^3.2.5"
   },
   "peerDependencies": {
-    "eslint": "^8.55.0"
+    "eslint": ">=8"
   },
   "engines": {
-    "node": ">=16"
+    "node": ">=18"
   },
   "repository": {
     "type": "git",
