--- a/package.json
+++ b/package.json
@@ -24,16 +24,17 @@
     "nodejs"
   ],
   "dependencies": {
-    "@eslint/js": "^9.4.0",
+    "@eslint/js": "^9.5.0",
     "@microsoft/eslint-formatter-sarif": "^3.1.0",
-    "eslint-plugin-jsdoc": "^48.2.7",
-    "eslint-plugin-security": "^3.0.0",
+    "eslint-plugin-jsdoc": "^48.2.12",
+    "eslint-plugin-security": "^3.0.1",
     "eslint-plugin-sonarjs": "^1.0.3"
   },
   "devDependencies": {
+    "@eslint/config-inspector": "^0.4.11",
     "@types/eslint": "^8.56.10",
-    "@types/node": "^20.13.0",
-    "prettier": "^3.2.5"
+    "@types/node": "^20.14.2",
+    "prettier": "^3.3.2"
   },
   "peerDependencies": {
     "eslint": ">=9"
