--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lint": "eslint lib --cache",
     "lint:ci": "eslint lib -f @microsoft/eslint-formatter-sarif -o eslint.sarif",
     "format": "prettier . --write --cache && npm run lint -- --fix",
-    "test": "npm run lint"
+    "test": "vitest run"
   },
   "keywords": [
     "eslint",
@@ -24,20 +24,21 @@
     "nodejs"
   ],
   "dependencies": {
-    "@eslint/js": "^9.5.0",
+    "@eslint/js": "^9.6.0",
     "@microsoft/eslint-formatter-sarif": "^3.1.0",
-    "eslint-plugin-jsdoc": "^48.2.12",
+    "eslint-plugin-jsdoc": "^48.5.0",
     "eslint-plugin-security": "^3.0.1",
     "eslint-plugin-sonarjs": "^1.0.3"
   },
   "devDependencies": {
-    "@eslint/config-inspector": "^0.4.11",
+    "@eslint/config-inspector": "^0.5.1",
     "@types/eslint": "^8.56.10",
-    "@types/node": "^20.14.2",
-    "prettier": "^3.3.2"
+    "@types/node": "^20.14.9",
+    "prettier": "^3.3.2",
+    "vitest": "^1.6.0"
   },
   "peerDependencies": {
-    "eslint": ">=9"
+    "eslint": ">=8"
   },
   "engines": {
     "node": ">=18"
