--- a/package.json
+++ b/package.json
@@ -46,6 +46,10 @@
   "engines": {
     "node": ">=18"
   },
+  "cpu": [
+    "arm64",
+    "x64"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/mauriciolauffer/eslint-config-mlauffer-nodejs.git"
