--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,7 +22,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: npm
-      - run: npm ci --ignore-scripts
+      - run: npm ci
       - run: npm test
       - run: npm run lint:ci
       - uses: github/codeql-action/upload-sarif@v3
