--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,6 +23,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: npm
       - run: npm ci
+      - run: npm i esbuild
       - run: npm test
       - run: npm run lint:ci
       - uses: github/codeql-action/upload-sarif@v3
