--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,6 +24,7 @@ jobs:
           cache: npm
       - run: npm ci
       - run: npm i esbuild
+      - run: npm i rollup
       - run: npm test
       - run: npm run lint:ci
       - uses: github/codeql-action/upload-sarif@v3
