--- a/package.json
+++ b/package.json
@@ -24,18 +24,21 @@
     "nodejs"
   ],
   "dependencies": {
-    "@eslint/js": "^9.6.0",
+    "@eslint/js": "^9.10.0",
     "@microsoft/eslint-formatter-sarif": "^3.1.0",
-    "eslint-plugin-jsdoc": "^48.5.0",
+    "eslint-plugin-jsdoc": "^50.2.2",
     "eslint-plugin-security": "^3.0.1",
-    "eslint-plugin-sonarjs": "^1.0.3"
+    "eslint-plugin-sonarjs": "^2.0.2",
+    "globals": "^15.9.0"
   },
   "devDependencies": {
-    "@eslint/config-inspector": "^0.5.1",
-    "@types/eslint": "^8.56.10",
-    "@types/node": "^20.14.9",
-    "prettier": "^3.3.2",
-    "vitest": "^1.6.0"
+    "@eslint/config-inspector": "^0.5.4",
+    "@types/eslint": "^9.6.1",
+    "@types/eslint__js": "^8.42.3",
+    "@types/eslint-plugin-security": "^3.0.0",
+    "@types/node": "^22.5.4",
+    "prettier": "^3.3.3",
+    "vitest": "^2.0.5"
   },
   "peerDependencies": {
     "eslint": ">=8"
@@ -43,6 +46,15 @@
   "engines": {
     "node": ">=18"
   },
+  "cpu": [
+    "arm64",
+    "x64"
+  ],
+  "os": [
+    "darwin",
+    "linux",
+    "win32"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/mauriciolauffer/eslint-config-mlauffer-nodejs.git"
