--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -8,15 +8,8 @@ permissions: read-all
 
 jobs:
   publish:
-    runs-on: ubuntu-latest
     permissions:
       id-token: write
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          registry-url: https://registry.npmjs.org
-          cache: npm
-      - run: npm publish --provenance
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_SECRET }}
+    uses: mauriciolauffer/.github/.github/workflows/npm-publish.yml@main
+    secrets:
+      NODE_AUTH_TOKEN: ${{ secrets.NPM_SECRET }}
