--- a/.github/workflows/pnpm-publish.yml
+++ b/.github/workflows/pnpm-publish.yml
@@ -1,4 +1,4 @@
-name: NPM Package Publish
+name: NPM Package Publish with PNPM
 
 on:
   release:
@@ -10,6 +10,6 @@ jobs:
   publish:
     permissions:
       id-token: write
-    uses: mauriciolauffer/.github/.github/workflows/npm-publish.yml@main
+    uses: mauriciolauffer/.github/.github/workflows/pnpm-publish.yml@main
     secrets:
       NODE_AUTH_TOKEN: ${{ secrets.NPM_SECRET }}
