--- a/package.json
+++ b/package.json
@@ -25,19 +25,20 @@
     "nodejs"
   ],
   "dependencies": {
-    "@eslint/js": "^9.17.0",
+    "@eslint/js": "^9.22.0",
     "@microsoft/eslint-formatter-sarif": "^3.1.0",
-    "eslint-plugin-jsdoc": "^50.6.1",
+    "eslint-plugin-jsdoc": "^50.6.6",
     "eslint-plugin-security": "^3.0.1",
-    "eslint-plugin-sonarjs": "^3.0.1",
-    "globals": "^15.13.0"
+    "eslint-plugin-sonarjs": "^3.0.2",
+    "globals": "^16.0.0"
   },
   "devDependencies": {
-    "@eslint/config-inspector": "^0.6.0",
+    "@eslint/config-inspector": "^1.0.2",
     "@types/eslint": "^9.6.1",
-    "@types/node": "^22.10.2",
-    "prettier": "^3.4.2",
-    "vitest": "^2.1.8"
+    "@types/node": "^22.13.10",
+    "eslint": "^9.22.0",
+    "prettier": "^3.5.3",
+    "vitest": "^3.0.8"
   },
   "peerDependencies": {
     "eslint": ">=9"
